Auth and Employee Services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+web.host.url=http://localhost:8082
+
 #Datasource configuration
 spring.datasource.url=jdbc:mysql://127.0.0.1/metrics
 spring.datasource.username=root
@@ -7,3 +9,21 @@ spring.jpa.hibernate.dialect=org.springframework.orm.jpa.vendor.HibernateJpaDial
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+#log4j properties
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+spring.application.name=metrics
+logging.path=/Users/user/
+logging.file=${logging.path}/${spring.application.name}/${spring.application.name}.log
+
+#Google ApI
+google.client.id=366660359606-slv60t5qincpa0i9ucj0sq5rg4sbbs9u.apps.googleusercontent.com
+google.client.secret=bdtHyz2_dT0fCatA80PUGUHd
+google.auth.scope=https://www.googleapis.com/auth/userinfo.email,https://www.googleapis.com/auth/userinfo.profile
+google.token.uri=https://accounts.google.com/o/oauth2/token
+google.auth.uri=https://accounts.google.com/o/oauth2/auth
+google.authorization.code=authorization_code
+google.redirect.url=http://localhost:8082/api/googlelogin
+google.project.id=traderental-1149
+google.response.type=token
