--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-#log4j properties
+#sl4j properties
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 spring.application.name=metrics
@@ -27,3 +27,13 @@ google.authorization.code=authorization_code
 google.redirect.url=http://localhost:8082/api/googlelogin
 google.project.id=traderental-1149
 google.response.type=token
+
+#javamail
+javamail.port=587
+javamail.host=smtp.gmail.com
+javamail.username=tara.sudarshan@razorthink.com
+javamail.password=tr@d3r3nt@l
+javamail.protocol=smtp
+javamail.auth=true
+javamail.starttls.enable=true
+javamail.mail.debug=false
