--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -58,11 +59,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
@@ -116,28 +113,26 @@
 			<artifactId>json</artifactId>
 			<version>20141113</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
 		</dependency>
 
-        <dependency>
+		<dependency>
 			<groupId>org.jsondoc</groupId>
-            <artifactId>spring-boot-starter-jsondoc</artifactId>
-            <version>1.2.11</version>
+			<artifactId>spring-boot-starter-jsondoc</artifactId>
+			<version>1.2.11</version>
 		</dependency>
-        <dependency>
-            <groupId>org.jsondoc</groupId>
-            <artifactId>jsondoc-ui-webjar</artifactId>
-            <version>1.2.11</version>
-        </dependency>
 
-        <dependency>
-			<groupId>com.maxmind.geoip</groupId>
-			<artifactId>geoip-api</artifactId>
-			<version>1.2.10</version>
+		<dependency>
+			<groupId>org.jsondoc</groupId>
+			<artifactId>jsondoc-ui-webjar</artifactId>
+			<version>1.2.11</version>
 		</dependency>
+
+
 
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback.contrib/logback-json-core -->
 		<dependency>
@@ -146,7 +141,12 @@
 			<version>0.1.2</version>
 		</dependency>
 
-		<!-- Code coverage tools -->
+		<!--Test Dependency which includes, Spring Test, JUnit, Hamcrest. Mockito -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
@@ -192,13 +192,13 @@
 
 							<transformers>
 								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
 									<resource>reference.conf</resource>
 								</transformer>
 								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
 										<Main-Class>com.rzt.AppBoot</Main-Class>
 									</manifestEntries>
